--- a/docs/schemas/consent.yaml
+++ b/docs/schemas/consent.yaml
@@ -17,7 +17,7 @@ Consent:
     status:
       type: string
       description: Status atual do consentimento
-      enum: ['AUTHORIZED', 'REVOKED', 'UNAUTHORIZED']
+      enum: ["AUTHORIZED", "REVOKED", "UNAUTHORIZED"]
       example: "AUTHORIZED"
       default: "UNAUTHORIZED"
     permissions:
@@ -25,7 +25,7 @@ Consent:
       description: Lista de permissões concedidas
       items:
         type: string
-        enum: ['ACCOUNTS_READ', 'BALANCES_READ', 'TRANSACTIONS_READ']
+        enum: ["ACCOUNTS_READ", "BALANCES_READ", "TRANSACTIONS_READ"]
       example: ["ACCOUNTS_READ", "BALANCES_READ"]
       minItems: 1
     expirationDateTime:
@@ -73,7 +73,7 @@ ConsentRequest:
       description: Lista de permissões solicitadas
       items:
         type: string
-        enum: ['ACCOUNTS_READ', 'BALANCES_READ', 'TRANSACTIONS_READ']
+        enum: ["ACCOUNTS_READ", "BALANCES_READ", "TRANSACTIONS_READ"]
       example: ["ACCOUNTS_READ", "BALANCES_READ"]
       minItems: 1
     currentAccount:
@@ -98,14 +98,14 @@ ConsentUpdateRequest:
     status:
       type: string
       description: Novo status do consentimento
-      enum: ['AUTHORIZED', 'REVOKED', 'UNAUTHORIZED']
+      enum: ["AUTHORIZED", "REVOKED", "UNAUTHORIZED"]
       example: "AUTHORIZED"
     permissions:
       type: array
       description: Lista atualizada de permissões
       items:
         type: string
-        enum: ['ACCOUNTS_READ', 'BALANCES_READ', 'TRANSACTIONS_READ']
+        enum: ["ACCOUNTS_READ", "BALANCES_READ", "TRANSACTIONS_READ"]
       example: ["ACCOUNTS_READ", "BALANCES_READ", "TRANSACTIONS_READ"]
     expirationDateTime:
       type: string
@@ -125,7 +125,7 @@ ConsentsPaginated:
     docs:
       type: array
       items:
-        $ref: '#/Consent'
+        $ref: "#/Consent"
       description: Lista de consentimentos na página atual
     totalDocs:
       type: integer
