API simulando uma IF(instituição financeira - COMPASS CHALLENGE)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT='YOUR_PORT_HERE'
 MONGO_URI='YOUR_MONGO_URI_HERE'
-
+VALID_API_KEYS=chave_secreta_app1,outra_chave_secreta_app2,api_key_do_grupo_3
 
 
 
