--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT='YOUR_PORT_HERE'
 MONGO_URI='YOUR_MONGO_URI_HERE'
 VALID_API_KEYS=chave_secreta_app1,outra_chave_secreta_app2,api_key_do_grupo_3
-
+JWT_SECRET='sua_chave_secreta_jwt_aqui'
 
 
 
